// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioLogo renders with L2 icon 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c1 img:nth-child(n) {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c1 img:nth-child(1) {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c1 img:nth-child(2) {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c0 {
  position: relative;
  top: 0;
  left: 0;
}

.c4 {
  height: 14px;
  width: 14px;
}

.c2 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c3 {
  background-color: #FFFFFF;
  border-radius: 2px;
  height: 16px;
  left: 60%;
  position: absolute;
  top: 60%;
  outline: 2px solid #131313;
  width: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        class="c2"
        src="blank_token.svg"
      />
      <img
        class="c2"
        src="blank_token.svg"
      />
    </div>
    <div
      class="c3"
    >
      <img
        alt="chainLogo"
        class="c4"
        src="arbitrum_logo.svg"
      />
    </div>
  </div>
</div>
`;

exports[`PortfolioLogo renders without L2 icon 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c1 img:nth-child(n) {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c1 img:nth-child(1) {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c1 img:nth-child(2) {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c0 {
  position: relative;
  top: 0;
  left: 0;
}

.c2 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        class="c2"
        src="blank_token.svg"
      />
      <img
        class="c2"
        src="blank_token.svg"
      />
    </div>
  </div>
</div>
`;
